[gd_scene load_steps=11 format=3 uid="uid://d1wjr6usat6lm"]

[ext_resource type="Script" path="res://src/combat/combat_sim.gd" id="1_0qirp"]
[ext_resource type="PackedScene" uid="uid://b426swtcuck2d" path="res://src/turn_queue.tscn" id="1_fdq17"]
[ext_resource type="PackedScene" uid="uid://cfc3ttsrd52r" path="res://src/rev_board.tscn" id="2_r23sb"]
[ext_resource type="PackedScene" uid="uid://cy4viyhan31e6" path="res://src/combat/advanced_joe.tscn" id="4_l8kup"]
[ext_resource type="Script" path="res://src/combat/memory.gd" id="5_ic7um"]
[ext_resource type="PackedScene" uid="uid://cx7utj7hd3ne" path="res://src/monsters/kobold.tscn" id="6_3iqgc"]
[ext_resource type="PackedScene" uid="uid://cjhuo8ouk2mpa" path="res://src/monsters/pacherr.tscn" id="7_hqyvp"]
[ext_resource type="PackedScene" uid="uid://dyru8oxadarmy" path="res://src/monsters/sewer_alligator.tscn" id="8_vy4r5"]

[sub_resource type="Resource" id="Resource_hy6fi"]
resource_local_to_scene = true
script = ExtResource("5_ic7um")
_facts = []

[sub_resource type="Resource" id="Resource_vyyeg"]
resource_local_to_scene = true
script = ExtResource("5_ic7um")
_facts = []

[node name="Simulator" type="Node2D"]
script = ExtResource("1_0qirp")

[node name="TurnQueue" parent="." instance=ExtResource("1_fdq17")]
verbose = false

[node name="Board" parent="." instance=ExtResource("2_r23sb")]
layer_0/tile_data = PackedInt32Array(0, 0, 3, 1, 131072, 3, 2, 131072, 3, 3, 0, 3, 4, 0, 3, 5, 0, 3, 6, 196608, 3, 7, 131072, 3, 8, 196608, 3, 9, 0, 3, 65536, 65536, 3, 65537, 196608, 2, 65538, 0, 2, 65539, 0, 2, 65540, 196608, 2, 65541, 131072, 2, 65542, 131072, 2, 65543, 196608, 2, 65544, 65536, 2, 65545, 65536, 3, 131072, 196608, 3, 131073, 0, 2, 131074, 196608, 2, 131075, 196608, 2, 131080, 65536, 2, 131081, 0, 3, 196608, 196608, 3, 196609, 0, 2, 196610, 131072, 2, 196611, 196608, 2, 196613, 196608, 3, 196617, 0, 3, 262144, 0, 3, 262145, 196608, 2, 262146, 196608, 2, 262147, 65536, 2, 327680, 0, 3, 327681, 131072, 2, 327682, 65536, 2, 327683, 196608, 2, 327684, 65536, 3, 393216, 0, 3, 393217, 131072, 2, 393218, 65536, 2, 393219, 196608, 2, 393220, 131072, 2, 393221, 196608, 2, 458752, 196608, 3, 458753, 65536, 2, 458754, 131072, 2, 458755, 65536, 2, 458756, 131072, 2, 458757, 196608, 2, 458758, 0, 2, 458759, 65536, 2, 524288, 131072, 3, 524289, 196608, 3, 524290, 131072, 3, 524291, 65536, 3, 524292, 196608, 3, 524293, 65536, 3, 524294, 196608, 3, 524295, 0, 3, 524296, 0, 3, 524297, 131072, 3, 196614, 196608, 3, 262150, 196608, 3, 262151, 0, 2, 327687, 65536, 2, 327688, 0, 2, 327689, 0, 3, 393225, 196608, 3, 262149, 196608, 2, 262148, 65536, 2, 196612, 65536, 3, 131076, 196608, 2, 131077, 131072, 2, 131078, 0, 2, 196615, 196608, 2, 131079, 0, 2, 327686, 196608, 3, 327685, 131072, 3, 262152, 65536, 2, 196616, 196608, 2, 393224, 0, 2, 393223, 0, 2, 393222, 196608, 2, 262153, 196608, 3, 458761, 131072, 3, 458760, 131072, 2)

[node name="AverageJoe" parent="Board" instance=ExtResource("4_l8kup")]
visible = true
position = Vector2(15, 19)
mem = SubResource("Resource_hy6fi")

[node name="Kobold" parent="Board" instance=ExtResource("6_3iqgc")]
visible = true
position = Vector2(17, 27)
mana_full = 0
mem = SubResource("Resource_vyyeg")

[node name="ExtraStages" type="Node" parent="."]

[node name="Pacherr" parent="ExtraStages" instance=ExtResource("7_hqyvp")]

[node name="SewerAlligator" parent="ExtraStages" instance=ExtResource("8_vy4r5")]

[connection signal="turn_started" from="TurnQueue" to="." method="_on_turn_queue_turn_started"]
